[package]
name = "file-merkle-proofs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"  # Update the path to your main module file

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tempfile = "3.12.0"
