[package]
name = "merkleproofs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"  # Path to the library root file

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tempfile = "3.12.0"
