[package]
name = "merkleproofs"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"  # Path to the library root file

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "merkleproofs"
path = "src/bin/server.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tempfile = "3.12.0"
shuttle-runtime = "0.47.0"
shuttle-warp = "0.47.0"
shuttle-axum = "0.47.0"
axum = "0.7.5"
